--- a/angular.json
+++ b/angular.json
@@ -33,11 +33,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
-          },
+             "styles": ["node_modules/aos/dist/aos.css", "src/styles.scss"],
+            "scripts": ["node_modules/aos/dist/aos.js"]
+         },
           "configurations": {
             "production": {
               "budgets": [
