--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "aos": "^2.3.4",
+    "chart.js": "^3.7.0",
     "ngx-hide-on-scroll": "^0.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
