--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "~13.1.0",
     "aos": "^2.3.4",
     "chart.js": "^3.7.0",
+    "ng2-charts": "^3.0.6",
     "ngx-hide-on-scroll": "^0.2.0",
     "rxjs": "~7.4.0",
+    "socket.io-client": "^4.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
