--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "aos": "^2.3.4",
     "chart.js": "^3.7.0",
     "ng2-charts": "^3.0.6",
+    "ng2-search-filter": "^0.5.1",
     "ngx-hide-on-scroll": "^0.2.0",
+    "ngx-order-pipe": "^2.2.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~7.4.0",
     "socket.io-client": "^4.4.1",
     "tslib": "^2.3.0",
