--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/socket.io-client": "^3.0.0",
     "aos": "^2.3.4",
     "chart.js": "^3.7.0",
     "ng2-charts": "^3.0.6",
@@ -25,8 +26,10 @@
     "ngx-hide-on-scroll": "^0.2.0",
     "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-socket-io": "^4.1.0",
     "rxjs": "~7.4.0",
     "socket.io-client": "^4.4.1",
+    "socketio-auth": "^0.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
